<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ContentDescription"
        android:src="@drawable/ksiazka"
        android:layout_above="@+id/googleLogin"/>

    <RelativeLayout
        android:id="@+id/googleLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_above="@+id/skipLogin"
        android:layout_marginBottom="10dp">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/signOutAndDisconnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_out"
                android:theme="@style/MyDarkButton" />

            <Button
                android:id="@+id/disconnectButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/disconnect"
                android:theme="@style/MyDarkButton" />
        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/skipLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:text="@string/SkipLogin"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>