<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageViewLesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/content_description"
        android:scaleType="fitStart"
        android:src="@drawable/obraz" />


    <TextView
        android:id="@+id/textViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutHumanBodyHeader"
        android:layout_alignRight="@+id/imageViewLesson"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#90FFFFFF"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />


    <LinearLayout
        android:id="@+id/linearLayoutHumanBodyHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageViewLesson"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#90FFFFFF"
        android:orientation="horizontal"
        android:padding="0dp">

        <!--Obrazek ksiazki albo mozgu -->
        <TextView
            android:id="@+id/textViewLesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="25"
            android:textColor="@color/colorPrimary"
            android:textSize="42sp" />

        <!--Layout trzymajacy w srodku tekst HumanBody -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Napis naglowka gora -->
            <TextView
                android:id="@+id/textViewGora"
                style="@style/TextViewGora"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/czlowiek_cialo_ludzkie_en" />
            <!-- Napis naglowka dol -->
            <TextView
                android:id="@+id/textViewDol"
                style="@style/TextViewDol"
                android:text="@string/czlowiek_cialo_ludzkie_pl" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>