<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ContentDescription"
            android:paddingLeft="0dp"
            android:paddingRight="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/photo_not_found"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:layout_toRightOf="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/calendar_day"
                        android:contentDescription="@string/ContentDescription"
                        android:scaleType="fitCenter"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/about_points_weekly"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:layout_weight="3"
                        android:gravity="center_vertical"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/calendar_month"
                        android:contentDescription="@string/ContentDescription"
                        android:scaleType="fitCenter"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/about_points_monthly"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:layout_weight="3"
                        android:gravity="center_vertical"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/ContentDescription"
                        android:scaleType="fitCenter"
                        android:src="@drawable/calendar_month"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/about_points_all_time"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:layout_weight="3"
                        android:gravity="center_vertical"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/backUpFileLinearLayout"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/backUpFileLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LogOutOrDisconnect"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createBackup"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_one_of_four"
            android:text="@string/create_backup"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/restoreBackup"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_one_of_four"
            android:text="@string/restore_backup"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <Button
        android:id="@+id/LogOutOrDisconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/findFriend"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_one_of_four"
        android:text="@string/log_out_or_disconnect"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/findFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_one_of_four"
        android:text="Find friends..."
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />
        </RelativeLayout>
</LinearLayout>

</LinearLayout>